custom-resources/network-policies/aspire-dashboard.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: aspire-dashboard-policy
  namespace: aspire-dashboard
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "18888"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: webservice
      toPorts:
        - ports:
            - port: "18889"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: memory
      toPorts:
        - ports:
            - port: "18889"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: opentelemetry-collector
      toPorts:
        - ports:
            - port: "18889"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: homelab-operator
      toPorts:
        - ports:
            - port: "18889"
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: aspire-dashboard
      toPorts:
        - ports:
            - port: "18889"
