custom-resources/network-policies/deny-all-gatus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-gatus
  namespace: gatus
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
