custom-resources/network-policies/deny-all-gitea.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: gitea
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
