custom-resources/network-policies/deny-all-postgres.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-postgres
  namespace: postgres
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
