custom-resources/network-policies/deny-all-webservice.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-webservice
  namespace: webservice
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
