custom-resources/network-policies/deny-all-workflow.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-workflow
  namespace: workflow
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
