custom-resources/network-policies/gitea.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitea-policy
  namespace: gitea
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "3000"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gitea
      toPorts:
        - ports:
            - port: "3000"
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gitea
      toPorts:
        - ports:
            - port: "3000"
