custom-resources/network-policies/webservice.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webservice-policy
  namespace: webservice
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "5090"
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aspire-dashboard
      toPorts:
        - ports:
            - port: "18889"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: postgres
      toPorts:
        - ports:
            - port: "5432"
